--- a/index.html
+++ b/index.html
@@ -472,10 +472,10 @@
               <div class="footer02--links2">
                 <ul>
                   <li><a href="#">FAQs</a></li>
-                  <li><a href="#">Featured Banner</a></li>
+                  <li><a href="#">Featured Brands</a></li>
                   <li><a href="#">Gift Vouchers</a></li>
                   <li><a href="#">Affiliates</a></li>
-                  <li><a href="#">Specials Gift</a></li>
+                  <li><a href="#">SpecialsGift</a></li>
                   <li><a href="#">Terms & Conditions</a></li>
                 </ul>
               </div>
