fix lai max height

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!-- Title -->
       <div class="navbar-header header__container--left">
         <i class="far fa-bookmark header__container--left__bookmark"></i>
-        <p class="" href="#">Welcome to Franco -an e-Commerce PSD Template!</p>
+        <p class="">Welcome to Franco -an e-Commerce PSD Template!</p>
       </div>
       <!-- Item Right -->
       <div class="header__container--right">
@@ -138,7 +138,7 @@
           <a href="#">
             <div class="col-6 col-sm-6 col-md-4 col-lg-3 product--category__item1">
               <div class="product--category__item1__image">
-                <figure class="image"><img width="100%" height="100%"  src="../image/watch.jpg" alt="watch"></figure>
+                <figure class="image"><img src="../image/watch.jpg" alt="watch"></figure>
                 <div class="product--category__item1--addcart"><a href="">ADD TO CART</a></div>
               </div>
               <div class="product--category__item1__text">
